# AscendERP

./: .gitignore  ASCEND_EOS_WHITEPAPER_FINAL.md  CLAUDE_OLD.md  COMPREHENSIVE_PROJECT_REVIEW.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INTEGRATIONS_SUMMARY.md  LICENSE  README.md  SESSION_COMPLETION_SUMMARY.md  WHITEPAPER_3_COLLECTIVE_INTELLIGENCE.md  WORKLOG.md  docker-compose.yml  focus-Group-review.md  plan.md  pyproject.toml  pytest.ini  requirements-azure-ai.txt  requirements-observability.txt  requirements-test.txt
.github/workflows/: ci-cd.yml  pages.yml
data/ingestion/: bronze_writer.py
docs/: IMPLEMENTED.md  PRODUCTION_READINESS.md  SECURITY.md  SESSION_CONTINUATION_SUMMARY.md  SESSION_SUMMARY.md  SWARM_INTELLIGENCE_DESIGN.md  architecture-diagrams.md  azure-ai-agent-integration-plan.md  feature-gap-analysis.md  implementation-status.md  index.html  observability-devui-guide.md  whitepaper_addition.md
docs/api/: API_GUIDE.md  openapi.yaml  postman_collection.json
docs/marketplace/: TEMPLATE_GUIDE.md
examples/: anf_model_management_example.py  azure_agent_365_example.py  code_execution_example.py  collective_intelligence_example.py  complete_ants_demo.py  edge_deployment_example.py  embedding_search_example.py  guardrails_example.py  microcontroller_example.py  model_router_example.py  n8n_integration_example.py  observability_example.py  pheromone_swarm_example.py  stem_cell_agents_example.py  task_queue_example.py
marketplace/: deploy_template.py
marketplace/templates/: cybersecurity-incident-response.yaml  finance-ap-reconciliation.yaml  hr-onboarding-assistant.yaml
platform/bootstrap/: README.md  antsctl.py  antsctl_impl.py
platform/standards/: ants-spec.example.yaml
scripts/: deploy.sh
seed/: 01-KEY-IDEAS-AND-PHILOSOPHY.md  02-CLAUDE-CODE-IDENTITY.md  03-CORE-PRINCIPLES.md  04-CODE-MODULES-PLAN.md  05-BLUEPRINT-LOGIC-AND-PLAN.md  06-TECHNICAL-STACK-SPECIFICATION.md  ANTS-Blueprint copy.md  ANTS-Blueprint-Whitepaper-v2.docx  ANTS_AscendERP_CIO_CTO_Whitepaper.md  Ascend_EOS_ANTS_CodeBuild_ImplementationPlan.md  COMPLETE_EXTRACTION_SUMMARY.md  Chatgpt.docx  ClaudeFirst pass Report.md  EXTRACTION_SUMMARY_COMPLETE.md  Enterprise-Financial-Services-AI-Architecture-ANF.md  Governance-Trust-Layer.md  README.md  Reference-Implementations.md  Solution Name.docx  The-Agentic-Enterprise-Blueprint.docx  ai-agent-memory-platform.md  extracted_ANTS_Blueprint_Whitepaper_v2.txt  extracted_Chatgpt.txt  extracted_Solution_Name.txt  extracted_The_Agentic_Enterprise_Blueprint.txt  extracted_gemini.txt  extracted_perplexity.txt  extracted_technical_project_plan.txt  gemini.docx  perplexity.docx
services/agent_orchestrator/: orchestrator.py
services/api_gateway/: auth.py  main.py  ratelimit.py
src/api/: ag_ui_client_example.html  agent_streaming_api.py
src/core/: llm_client.py  observability.py  observability_config.py
src/devtools/: __init__.py  ag_ui_protocol.py  devui_server.py
src/integrations/: azure_ai_foundry.py  azure_ai_foundry_connectors.py  entra_agent_ids.py  semantic_kernel_integration.py
src/marketplace/: template_schema.py
tests/: README.md  conftest.py
tests/e2e/: test_scenarios.py
tests/integration/: test_agent_framework.py  (+2 more)
work-log/: WORK_LOG.md
(+125 files in other folders)
